# AEMS

./: .eslintcache  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  README.md  aems-client.code-workspace  aems.code-workspace  azure-pipelines-1.yml  azure-pipelines.yml  bitbucket-pipelines.yml  buildApi.sh  contributing.md  docker-compose.ci.override.yaml  docker-compose.e2e.yaml  docker-compose.graphics.yaml  docker-compose.yaml  install_docker.sh  migrate_postgres.sh  nginx.conf  package-lock.json  package.json  pyproject.toml  sonar-project.properties  test.csv  tsconfig.json
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  setupEnvs.sh
.github/: copilot-instructions.md  dependabot.yml
Common/: openapi.json
GraphicsServer/: Dockerfile  README.md  nginx.conf
Server/: .coverage  .env  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  api.py  buildOpenApiJson.py  custom_logging.py  environment.yml  interfaces.py  main.py  openapi.json  package-lock.json  pyproject.toml  pytest.ini  seed_db.py  seed_scoresheets.py  test_custom_logging.py
Server/alembic/: env.py
Server/alembic/versions/: 2023_01_02_1022-572da8bdd671_.py  2023_01_02_1324-63c5a28675fe_.py  2023_01_02_1325-23e344e289f3_.py  2023_02_05_1134-7a054990608f_add_intiial_schema.py  2023_02_26_1742-33e9af80743a_add_paddler_heat_relationships_and_.py  2023_03_11_1629-51ca4c9f5bc1_add_paddler_info.py  2023_03_11_1747-23ba83f5dec4_add_move_direction.py  2023_03_12_1111-d4bc03bc20d2_add_nonn_nullable_constraints.py  2023_03_12_1132-4aecf7cbb980_add_nonn_nullable_constraints.py  2023_03_12_1220-b356d03c9aa2_add_nonn_nullable_constraints.py  2023_04_14_1247-7b1ff74a8fb0_.py  2023_10_01_1136-8e05b103124b_update_scored_move_structure.py  2023_10_01_1247-b88a9571adc8_add_phase_to_scored_move_structure.py  2023_11_25_1733-77c0a8c18e80_change_bib_type_to_number.py  2023_11_25_1736-e1a32f9296a8_add_number_of_scoring_runs_to_phase_.py  2023_12_17_1341-014230cae1d9_change_run_data_type.py  2024_01_01_1101-74fecaa4ec6e_add_number_of_judges_to_phase.py  2024_01_01_1424-a16cc7d14a36_add_last_phase_rank_to_athlete_heat_.py  2024_11_30_1918-611a62dfbf51_add_run_status.py  2025_01_11_1243-e42976f626a0_fix_error_from_nullable_primary_keys.py  2025_01_17_2228-4761b40f88dd_update_default_values_allocation_ot_use_.py  2025_03_02_1809-4b23a86a22d0_add_athlete_affiliation.py  2025_03_30_1539-d66d428a8a11_add_bonus_display_order.py  871d29530095_.py  b37da1e5271f_baseline.py
Server/app/: Items.md  autogenEndpoints.py  broadcastEndpoints.py  conftest.py  customScoringEndpoints.py  ingestUpload.py  pdfEndpoints.py  scoresheetEndpoints.py  scoring_logic.py  test_autogen_endpoints.py  test_scoresheet_endpoints.py
Server/app/common/: async_pg_manager.py  socket_manager.py  websocket_handler.py
Server/app/common/tests/: test_async_pg_manager.py  test_socket_manager.py  test_websocket_handler.py
Server/app/competition_management/: competition_management.py  create_competition_from_xlsx.py  ingestUpload.py  pdfEndpoints.py  promote_phase.py
Server/app/competition_management/tests/: test_competition_management.py  test_create_competition_from_xlsx.py  test_pdfEndpoints.py
Server/app/crud/: athlete.py  athleteheat.py  availablebonuses.py  availablemoves.py  competition.py  event.py  heat.py  phase.py  run_status.py  schemas.py  scoredmoves.py  scoresheet.py
Server/app/crud/tests/: conftest.py  test_athlete.py  test_athleteheat.py  test_availablebonuses.py  test_availablemoves.py  test_competition.py  test_event.py  test_heat.py  test_phase.py  test_run_status.py  test_scoredmoves.py  test_scoresheet.py
Server/app/scoring/: customScoringEndpoints.py  scoring_logic.py
Server/app/scoring/tests/: __init__.py  test_customScoringEndpoints.py  test_scoring_logic.py
Server/app/tests/: README_AUTOGEN_TESTS.md  stress_full_competition_script.py  test_autogen_complete.py  test_autogen_endpoints.py  test_autogen_http_endpoints.py  test_autogen_http_real.py  test_autogen_http_with_helpers.py  test_autogen_minimal.py  test_autogen_simple.py  test_autogen_simplified.py  test_autogen_uuid_compatibility.py  test_basic_http.py  test_competition_endpoint.py  test_endpoints_with_http.py  test_model_helpers.py  test_uuid_compatibility.py
Server/conda/: env.yaml
Server/data/: icf.json  icf_2025.json  icf_2026.json  icf_2026_diff.md  nfl.json
Server/db/: client.py  models.py
Server/fonts/: HelveticaNeueItalic.ttf:Zone.Identifier
Server/scripts/: buildOpenApiJson.py  create_competition_from_csv.py  example_csv.csv  seed_competition_data_from_xlsx.py  seed_scoresheets.py
Server/tests/: conftest.py  test_scoring_logic.py
Timer/: Hardware.md  README.md  install_timer.sh  pyproject.toml  setup_pi.sh
Timer/setup_scripts/: add_logs_dir.sh  add_python_deps.sh  add_timer_as_systemd_service.sh  add_wifi_network.sh  apt_update_cron.sh  install_dependencies.sh  uninstall_timer.sh
Timer/src/: fake_timer.py  timer.py  tm1637.py
Timer/tests/: conftest.py  test_timer.py
Webapp/: .env.development  .env.production  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  Dockerfile  README.md  aems-client.code-workspace  azure-pipelines-1.yml  azure-pipelines.yml  craco.config.js  eslint.config.mjs  jest.config.js  jest.polyfills.js  jest.preset.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
Webapp/__mocks__/: until-async.js
Webapp/public/: index.html  manifest.json
Webapp/src/: App.tsx  index.jsx  index.tsx  setupTests.ts  testUtils.tsx  topLevelErrorHandler.test.tsx  topLevelErrorHandler.tsx
Webapp/test/: scoringUtils.spec.ts
buildTypes/: buildTsFromJSONSchema.js
docs/: architecture.md  server_setup_guide.md  smg.md
e2e/: package-lock.json  package.json  playwright.config.ts
public/: index.html
src/: .prettierignore  App.test.tsx  App.tsx  Athletes.tsx  Competitions.tsx  RecoilObserver.tsx  Selectors.tsx  atoms.tsx  config.ts  index.tsx  reportWebVitals.ts  scoringUtils.ts  setupTests.ts  topLevelErrorHandler.tsx
(+267 files in other folders)
