[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "B" ,"I", "N", "UP", "YTT", "ANN", "FBT", "EM", "RUF", "PD", "TRY", "G"]
fixable = ["ALL"]
line-length = 88

[project]
name = "aems_backend"
description = "backend functions and database conntroller for the AEMS system"
version = "0.1.0"
requires-python =">3.10.0"
