[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]      # PEP 508 specifications.
build-backend = "setuptools.build_meta"

# Ignore flat-layout.
[tool.setuptools]
py-modules = []

[tool.ruff]
lint.ignore = ["E501", "N999", "UP007", "ANN401"]
lint.select = [
    "E",
    "F",
    "B",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "FBT",
    "EM",
    "RUF",
    "PD",
    "TRY",
    "G",
]
lint.fixable = ["ALL"]
line-length = 88
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]
[tool.pytest.ini_options]
addopts = ["--cov=.", "--cov-report=term-missing"]
pythonpath = ["."]
[tool.coverage.run]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[project]
dependencies = [
    "anyio",
    "broadcaster[postgres]",
    "sqlalchemy",
    "alembic",
    "psycopg2",
    "gunicorn",
    "orjson",
    "asyncpg",
    "fastapi",
    "pandas",
    "pandas[performance]",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic<=2.11.7",
    "SQLAlchemy<=1.4.54",
    "starlette==0.47.2",
    "fpdf2",
    "pandas",
    # Dev
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "fastapi-quickcrud",
    "sqlalchemy_utils",
    "sqlalchemy[mypy]",    # remove when we upgrade to 2.0
    "pydantic-sqlalchemy",
    "structlog",
    "rich",
    "asgi-correlation-id",
    "openpyxl",


]
name = "aems_backend"
description = "backend functions and database conntroller for the AEMS system"
version = "0.1.0"
requires-python = ">=3.10,<3.11" # fastapi-quickcrud does not support anything newer than 3.10
