[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]      # PEP 508 specifications.
build-backend = "setuptools.build_meta"

# Ignore flat-layout.
[tool.setuptools]
py-modules = []

[tool.ruff]
lint.ignore = ["E501", "N999", "UP007", "ANN401"]
lint.select = [
    "E",
    "F",
    "B",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "FBT",
    "EM",
    "RUF",
    "PD",
    "TRY",
    "G",
]
lint.fixable = ["ALL"]
line-length = 88
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]
[tool.pytest.ini_options]
addopts = ["--cov=.", "--cov-report=term-missing"]
pythonpath = ["."]
[tool.coverage.run]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[project]
dependencies = [
    "anyio",
    "broadcaster[postgres]",
    "sqlalchemy",
    "alembic>=1.18.0,<2.0",  # Upgraded from 1.14.1
    "psycopg2",
    "gunicorn>=25.0.0,<26.0",  # Upgraded from 23.0.0
    "orjson",
    "asyncpg>=0.31.0,<1.0",  # Upgraded from 0.26.0
    "fastapi",
    "pandas",
    "pandas[performance]",
    "uvicorn[standard]>=0.40.0,<1.0",  # Upgraded from 0.19.0
    "python-multipart",
    "pydantic<=1.10.23",
    "SQLAlchemy<=1.4.54",
    "starlette==0.14.2",
    "fpdf2",
    # Dev
    "ruff>=0.15.0,<1.0",  # Upgraded from 0.9.6
    "mypy",
    "pytest>=8.3.0,<9.0",  # Keep pytest 8.x
    "pytest-cov>=6.0.0,<7.0",
    "pytest-asyncio>=1.0.0,<2.0",  # Upgraded from 0.25.3
    "sqlalchemy_utils",
    "sqlalchemy[mypy]",    # remove when we upgrade to 2.0
    "pydantic-sqlalchemy",
    "structlog",
    "rich",
    "asgi-correlation-id",
    "openpyxl",
    "requests",  # needed for TestClient with starlette 0.14.2


]
name = "aems_backend"
description = "backend functions and database conntroller for the AEMS system"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
